# idea_organizer

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/: commit_message_generation.md
backend/: config.py  main.py
backend/analytics/: __init__.py  duckdb_client.py  event_log.py
backend/api/: edges.py  graph.py  nodes.py  router.py  search.py
backend/models/: __init__.py  enums.py  nodes.py  relationships.py
backend/schemas/: __init__.py  common.py  edges.py  graph.py  nodes.py
backend/services/: edge_service.py  graph_service.py  node_service.py  perf.py  search_service.py
backend/tests/: conftest.py  test_enums.py  test_event_log.py  test_graph_clear.py  test_schemas.py
docs/: usage-templates.md
docs/plans/: Phase01.md  Phase02.md  Phase03.md  Phase04.md  Phase05.md  Phase06.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  edges.ts  graph.ts  nodes.ts
frontend/src/components/Canvas/: ContextMenu.tsx  CustomEdge.tsx  CustomNode.tsx  GraphCanvas.tsx
frontend/src/components/DetailPanel/: DetailPanel.tsx  EdgeEditPanel.tsx  NodeEditPanel.tsx
frontend/src/components/Toolbar/: MainToolbar.tsx  QuickInput.tsx
frontend/src/hooks/: useAutoSave.ts  useGraphData.ts
frontend/src/store/: graphStore.ts  uiStore.ts
frontend/src/types/: edge.ts  node.ts
frontend/src/utils/: colors.ts  edgeStyles.ts
scripts/: check.sh  dev.sh  init_neo4j.py
