[project]
name = "idea-organizer"
version = "0.1.0"
description = "Research Idea Organizer - graph-based knowledge management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "neomodel>=5.4",
    "duckdb>=1.2",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "mypy>=1.14",
    "ruff>=0.9",
]

[tool.mypy]
strict = true
plugins = []

[[tool.mypy.overrides]]
module = "neomodel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backend.models.*"
# neomodel properties return Property descriptors, not plain types
disable_error_code = ["assignment", "arg-type", "comparison-overlap", "attr-defined"]

[[tool.mypy.overrides]]
module = "backend.services.*"
# neomodel Property → str mismatches and db module re-exports
disable_error_code = ["arg-type", "attr-defined", "comparison-overlap", "type-arg"]

[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false
disable_error_code = ["comparison-overlap", "no-untyped-def"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "integration: marks tests that require a running Neo4j instance",
]
